[TIP-666] Fix attribute help align

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AttributeActions.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/AttributeActions.less
@@ -43,5 +43,6 @@
   &-help {
     color: @AknLightFontColor;
     padding: 0 10px;
+    text-align: right;
   }
 }
